fix: edit logout button on mobile menu

--- a/pages/globals.css
+++ b/pages/globals.css
@@ -39,8 +39,8 @@ a {
   .btn-secondary {
     @apply text-brand-800 font-semibold rounded-xl border-2 border-brand-700 bg-transparent;
   }
-  .btn-warning{
-    @apply text-white font-semibold rounded-xl border-2 bg-red-700;
+  .btn-warning {
+    @apply text-white font-semibold rounded-xl border-2 bg-error-dark focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-error focus:ring-white;
   }
 }
 
